# OPENENV_RL

./: .dockerignore  .env.example  .gitignore  Blog.md  Dockerfile  GovWorkflow_RL_ENV.ipynb  README.md  audit.py  baseline_openai.py  client.py  inference.py  nvidia_models.txt  old_simulator.py  openenv.yaml  phase1_validation.py  pyproject.toml  requirements.txt  requirements_rl.txt  restore_simulator.py  run_all_tests.sh  test_phase2.py
app/: README.md  __init__.py  api_gateway.py  baselines.py  config.py  engine.py  env.py  event_engine.py  graders.py  main.py  models.py  persistence.py  reward.py  sector_profiles.py  signal_computer.py  simulator.py  state_machine.py  story_router.py  tasks.py  training_jobs.py  utils.py
docs/: FRONTEND_WORKFLOW.md  PHASE2_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION.md  PROJECT_STRUCTURE.md
frontend/: README.md
gov_workflow_openenv_tests/: README_TESTS.md  VALIDATION_CHECKLIST.md  run_all_tests.sh
logs/: eval_phase1.err  eval_phase1.out
results/: baseline_run_20260405_163814.json  baseline_run_20260425_154439.json  baseline_run_20260425_155149.json  smoke_test_results.json
rl/: README.md  __init__.py  action_mask.py  callbacks.py  cost_tracker.py  curriculum.py  eval_grader.py  evaluate.py  feature_builder.py  gov_workflow_env.py  gym_wrapper.py  plot_training.py  train_ppo.py  train_recurrent.py
scripts/: README.md  api_live_http_audit.py  benchmark_ladder.py  convert_grpo_csv.py  pre_deploy_e2e.ps1  pretrain_go_nogo.py  run_api_e2e.ps1  run_api_live_audit.ps1  run_local.py  smoke_test.py  validate-submission.sh  validate_env.py
server/: __init__.py  app.py  gov_environment.py
tests/: README.md  conftest.py  list_nvidia_models.py  manual_test_10_models.py  test_action_mask.py  test_all_models.py  test_api.py  test_api_end_to_end_suite.py  test_baseline_repro.py  test_curriculum.py  test_engine_simulator_exports.py  test_env.py  test_feature_builder.py  test_graders.py  test_gym_wrapper.py  test_gym_wrapper_integration.py  test_live_simulation_e2e.py  test_models.py  test_output.txt  test_output_10.txt  test_persistence_history.py  test_phase1_models.py  test_phase1_sector_and_tasks.py  test_phase2_api.py  test_phase2_graders.py  test_reward.py  test_rl_evaluate.py  test_run.txt  test_simulator_guardrails.py  test_tasks.py  (+3 more)
(+69 files in other folders)
