[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gov-workflow-openenv"
version = "0.3.0"
description = "Phase 3 — FastAPI session-based HTTP server wrapping GovWorkflowEnv"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"