[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gov-workflow-openenv"
version = "0.3.0"
description = "Phase 3 - FastAPI session-based HTTP server wrapping GovWorkflowEnv"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "openenv-core>=0.2,<1.0",
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "python-dotenv>=1.0,<2.0",
    "openai>=2.7.2,<3.0",
    "requests>=2.32,<3.0",
    "PyYAML>=6.0,<7.0",
]

[project.scripts]
server = "server.app:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
