[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gov-workflow-openenv"
version = "0.3.0"
description = "Phase 3 - FastAPI session-based HTTP server wrapping GovWorkflowEnv"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "openenv-core>=0.2,<1.0",
    "python-dotenv>=1.0,<2.0",
    "openai>=2.7.2,<3.0",
    "requests>=2.32,<3.0",
    "httpx>=0.27,<1.0",
    "anyio>=4.0,<5.0",
    "PyYAML>=6.0,<7.0",
    "sse-starlette>=2.1,<3.0",
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
rl = [
    "torch>=2.2,<3.0",
    "stable-baselines3>=2.3,<3.0",
    "sb3-contrib>=2.3,<3.0",
    "gymnasium>=0.29.1,<1.3",
    "tensorboard>=2.16,<3.0",
    "matplotlib>=3.8,<4.0",
    "scipy>=1.12,<2.0",
    "optuna>=3.6,<5.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[project.scripts]
server = "server.app:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
